<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>jeorg-spring-5</artifactId>
        <groupId>org.jesperancinha.std</groupId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>jeorg-spring-flash</artifactId>
    <modules>
        <module>jeorg-spring-flash-1</module>
        <module>jeorg-spring-flash-2</module>
        <module>jeorg-spring-flash-3</module>
        <module>jeorg-spring-flash-4</module>
        <module>jeorg-spring-flash-5</module>
        <module>jeorg-spring-flash-6</module>
        <module>jeorg-spring-flash-7</module>
        <module>jeorg-spring-flash-8</module>
        <module>jeorg-spring-flash-9</module>
        <module>jeorg-spring-flash-10</module>
        <module>jeorg-spring-flash-11</module>
        <module>jeorg-spring-flash-12</module>
        <module>jeorg-spring-flash-13</module>
        <module>jeorg-spring-flash-14</module>
        <module>jeorg-spring-flash-15</module>
        <module>jeorg-spring-flash-16</module>
        <module>jeorg-spring-flash-17</module>
        <module>jeorg-spring-flash-18</module>
        <module>jeorg-spring-flash-19</module>
        <module>jeorg-spring-flash-20</module>
    </modules>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <packaging>pom</packaging>
</project>